fixing alignment

--- a/app/assets/stylesheets/exercises.css.scss
+++ b/app/assets/stylesheets/exercises.css.scss
@@ -150,7 +150,6 @@ $task-color: #6c757d;
 
 .task-rating {
   position: relative;
-  font-size: 0.8em;
   border-style: solid;
   border-width: 1px;
   border-color: $task-color;
@@ -159,14 +158,18 @@ $task-color: #6c757d;
   display: inline-flex;
 
   .task-star-rating {
-    font-size: 1.2em;
     padding: 2px 3px;
   }
-  .number-rating {
+  .number-rating-container {
     background-color: $task-color;
-    padding: 2px 5px 2px 3px;
-    color: white;
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+
+    .number-rating {
+      padding: 2px 5px 2px 3px;
+      font-size: 0.8em;
+      color: white;
+    }
   }
 }
 
